# starfetch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  ascii.h  ascii_lights.h  ascii_rain.h  cmake_install.cmake  ellipse.h  gmon.out  rect.h  starfetch  starfetch.c  table_sin.h  test.txt  vector.h
